--- a/templates/index.html
+++ b/templates/index.html
@@ -5,137 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thyroid Disease Detection</title>
     <link rel="stylesheet" href="../static/style.css">
-
 </head>
 <body>
     <div class="container">
-        <h1>Thyroid Disease Detection</h1>
-        <form id="predictionForm" method="POST" action="/predict">
-
-            <div class="form-row">
-                <div class="form-group">
-                    <label for="age">Age:</label>
-                    <input type="number" id="age" name="age" placeholder="e.g. 45" min="0" max="120" required>
-                </div>
-                <div class="form-group">
-                    <label for="sex">Sex:</label>
-                    <select id="sex" name="sex" required>
-                        <option value="" disabled selected>Select your sex</option>
-                        <option value="Male">Male</option>
-                        <option value="Female">Female</option>
-                    </select>
-                </div>
-
-                <div class="form-group">
-                    <label for="lithium">Lithium:</label>
-                    <select id="lithium" name="lithium" required>
-                        <option value="" disabled selected>Select option</option>
-                        <option value="No">No</option>
-                        <option value="Yes">Yes</option>
-                    </select>
-                </div>
-            </div>
-
-            <div class="form-row">
-                <div class="form-group">
-                    <label for="goitre">Goitre:</label>
-                    <select id="goitre" name="goitre" required>
-                        <option value="" disabled selected>Select option</option>
-                        <option value="No">No</option>
-                        <option value="Yes">Yes</option>
-                    </select>
-                </div>
-
-                <div class="form-group">
-                    <label for="psych">Psych:</label>
-                    <select id="psych" name="psych" required>
-                        <option value="" disabled selected>Select option</option>
-                        <option value="No">No</option>
-                        <option value="Yes">Yes</option>
-                    </select>
-                </div>
-
-                <div class="form-group">
-                    <label for="T3">T3:</label>
-                    <input type="number" step="any" id="T3" name="T3" placeholder="e.g. 2.5" min="0" required>
-                </div>
-            </div>
-
-            <div class="form-row">
-                <div class="form-group">
-                    <label for="T4U">T4U:</label>
-                    <input type="number" step="any" id="T4U" name="T4U" placeholder="e.g. 1.5" min="0" required>
-                </div>
-
-                <div class="form-group">
-                    <label for="FTI">FTI:</label>
-                    <input type="number" step="any" id="FTI" name="FTI" placeholder="e.g. 100" min="0" required>
-                </div>
-
-                <div class="form-group">
-                    <label for="tumor">Tumor:</label>
-                    <select id="tumor" name="tumor" required>
-                        <option value="" disabled selected>Select option</option>
-                        <option value="No">No</option>
-                        <option value="Yes">Yes</option>
-                    </select>
-                </div>
-            </div>  
-
-
-            <div class="form-row">
-
-                <div class="form-group">
-                    <label for="on_thyroxine">On Thyroxine:</label>
-                    <select id="on_thyroxine" name="on_thyroxine" required>
-                        <option value="" disabled selected>Select option</option>
-                        <option value="No">No</option>
-                        <option value="Yes">Yes</option>
-                    </select>
-                </div>
-
-                <div class="form-group">
-                    <label for="hypopituitary">Hypopituitary:</label>
-                    <select id="hypopituitary" name="hypopituitary" required>
-                        <option value="" disabled selected>Select option</option>
-                        <option value="No">No</option>
-                        <option value="Yes">Yes</option>
-                    </select>
-                </div>
-
-                <div class="form-group">
-                    <label for="on_antithyroid_medication">On Antithyroid Medication:</label>
-                    <select id="on_antithyroid_medication" name="on_antithyroid_medication" required>
-                        <option value="" disabled selected>Select option</option>
-                        <option value="No">No</option>
-                        <option value="Yes">Yes</option>
-                    </select>
-                </div>
-            </div>
-            
-            <div class="form-row-2">
-                <div class="form-group-2">
-                    <label for="thyroid_surgery">Thyroid Surgery:</label>
-                    <select id="thyroid_surgery" name="thyroid_surgery" required>
-                        <option value="" disabled selected>Select option</option>
-                        <option value="No">No</option>
-                        <option value="Yes">Yes</option>
-                    </select>
-                </div>
-                <div class="form-group-2">
-                    <label for="I131_treatment">I131 Treatment:</label>
-                    <select id="I131_treatment" name="I131_treatment" required>
-                        <option value="" disabled selected>Select option</option>
-                        <option value="No">No</option>
-                        <option value="Yes">Yes</option>
-                    </select>
-                </div>
-            </div>
-
-            <div class="form-group submit-btn">
-                <input type="submit" value="Predict">
-            </div>
-        </form>
+        <h1>Welcome to Thyroid Disease Detection System</h1>
+        <p>This is a simple web app to detect thyroid affected patients in their pre-stages. Explore the power of data analysis!</p>
+        <a href="/predict">Go to Prediction</a>
     </div>
 </body>
 </html>
