--- a/static/style.css
+++ b/static/style.css
@@ -2,10 +2,8 @@ body {
     font-family: Arial, sans-serif;
     background-image: url('https://www.wallpaperflare.com/static/119/256/853/space-tylercreatesworlds-diamonds-space-art-wallpaper.jpg'); /* Add background image URL */
     background-size: cover;
-    /* background-position: center; */
     background-color: #f5f5f5; /* Fallback background color */
     margin: 0;
-    /* background-size: 1000px; */
     padding: 0;
     color: #333;
 }
@@ -17,10 +15,10 @@ body {
     background-color: rgba(255, 255, 255, 0.9);
     border-radius: 10px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+    text-align: center; /* Center align text and elements */
 }
 
 h1 {
-    text-align: center;
     color: #007BFF;
 }
 
