--- a/static/form.css
+++ b/static/form.css
@@ -1,9 +1,11 @@
-/* General styles for the body */
 body {
     font-family: Arial, sans-serif;
-    background-color: #f4f4f9;
+    background-image: url('https://www.wallpaperflare.com/static/119/256/853/space-tylercreatesworlds-diamonds-space-art-wallpaper.jpg'); 
+    background-size: cover;
+    background-color: #f5f5f5;
     margin: 0;
     padding: 0;
+    color: #333;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -11,35 +13,31 @@ body {
 }
 
 .container {
-    background-color: #ffffff;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    padding: 20px;
+    background-color: rgba(255, 255, 255, 0.9);
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    padding: 40px;
     width: 100%;
     max-width: 1100px;
     box-sizing: border-box;
 }
 
-/* Form row to display three cells in a row */
 .form-row {
     display: flex;
     justify-content: space-between;
     margin-bottom: 20px;
 }
 
-/* Form row to display two cells in a row */
 .form-row-2 {
     display: flex;
     justify-content: space-between;
     margin-bottom: 20px;
 }
 
-/* Each form-group takes 32% of the row */
 .form-group {
     flex: 0 0 32%;
 }
 
-/* Each form-group takes 48% of the row */
 .form-group-2 {
     flex: 0 0 48%;
 }
@@ -51,7 +49,6 @@ label {
     margin-bottom: 5px;
 }
 
-/* Input and select hover, focus, and error effects */
 input[type="number"], 
 select {
     width: 100%;
@@ -62,14 +59,12 @@ select {
     transition: border-color 0.3s ease, box-shadow 0.3s ease;
 }
 
-/* Hover effect for input fields and dropdowns */
 input[type="number"]:hover, 
 select:hover {
     border-color: #007bff;
     box-shadow: 0 0 8px rgba(0, 123, 255, 0.5);
 }
 
-/* Focus effect for input fields and dropdowns */
 input[type="number"]:focus, 
 select:focus {
     outline: none;
@@ -78,27 +73,23 @@ select:focus {
     box-shadow: 0 0 12px rgba(0, 86, 179, 0.8);
 }   
 
-/* Submit button initial styles */
 input[type="submit"] {
     background-color: #007bff;
     color: white;
     border: none;
     border-radius: 4px;
-    padding: 10px 20px; /* Adjust padding for initial size */
+    padding: 10px 20px; 
     font-size: 16px;
     cursor: pointer;
-    transition: background-color 0.3s ease, padding 0.3s ease, font-size 0.3s ease; /* Smooth transition for size, font size, and color */
+    transition: background-color 0.3s ease, padding 0.3s ease, font-size 0.3s ease; 
 }
 
-/* Submit button hover effect */
 input[type="submit"]:hover {
     background-color: green;
-    padding: 15px 30px; /* Increase padding on hover */
-    font-size: 18px; /* Increase font size on hover */
+    padding: 16px 20px; 
+    font-size: 18px; 
 }
 
-
-/* Header styles */
 h1 {
     text-align: center;
     margin-bottom: 20px;
