--- a/static/style.css
+++ b/static/style.css
@@ -2,7 +2,7 @@ body {
     font-family: Arial, sans-serif;
     background-image: url('https://www.wallpaperflare.com/static/119/256/853/space-tylercreatesworlds-diamonds-space-art-wallpaper.jpg'); /* Add background image URL */
     background-size: cover;
-    background-color: #f5f5f5; /* Fallback background color */
+    background-color: #f5f5f5; 
     margin: 0;
     padding: 0;
     color: #333;
@@ -15,7 +15,7 @@ body {
     background-color: rgba(255, 255, 255, 0.9);
     border-radius: 10px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
-    text-align: center; /* Center align text and elements */
+    text-align: center; 
 }
 
 h1 {
